--- a/employee_master/templates/employee_master/employee_detail.html
+++ b/employee_master/templates/employee_master/employee_detail.html
@@ -27,6 +27,10 @@
                   <li class="list-group-item">
                     <b>Contact_No</b> <a class="float-right">{{ object.Contact_no }}</a>
                   </li>
+                     <li class="list-group-item">
+                    <b>D.O.B</b> <a class="float-right">{{ object.dob }}</a>
+                  </li>
+
                   </li>
 
 
@@ -63,7 +67,6 @@
 
                 <br class="text-muted">
                   <span class="tag tag-danger">Gender: {{ object.gender }}</span><hr/>
-                  <span class="tag tag-success">D.O.B: {{ object.dob }}</span><hr/>
                   <span class="tag tag-info">Designation: {{ object.designation }}</span><hr/>
                   <span class="tag tag-warning">Reffrence: {{ object.reffrence }}</span><hr/>
                   <span class="tag tag-primary">Shift Timing: {{ object.shift_timming }}</span><hr/>
