--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -208,6 +208,14 @@
                with font-awesome or any other icon font library -->
 
 
+{#            <li class="nav-item">#}
+{#            <li class="nav-item">#}
+{#                    <a href="{% url 'dashboard' %}" class="nav-link">#}
+{#                      <i class="far fa-circle nav-icon"></i>#}
+{#                      <p>Dashboard</p>#}
+{#                    </a>#}
+{#                  </li>#}
+
             <li class="nav-item">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-rupee-sign"></i>
@@ -368,7 +376,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-money-bill"></i>
+              <i class="nav-icon fas fa-rupee-sign"></i>
               <p>
                 Employee Payment Details
                 <i class="right fas fa-angle-left"></i>
@@ -384,6 +392,32 @@
                   </li>
                   <li class="nav-item">
                     <a href="{% url 'employee_payment-view' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>View</p>
+                    </a>
+                  </li>
+              </ul>
+
+            </li>
+
+            <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-rupee-sign"></i>
+              <p>
+                Employee DailyBase Amount
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+
+              <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="{% url 'e_dailybase_amount-new' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Entry</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'e_dailybase_amount-view' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>View</p>
                     </a>
@@ -449,7 +483,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-money-bill"></i>
+              <i class="nav-icon fas fa-rupee-sign"></i>
               <p>
                 Creditors Payment
                 <i class="right fas fa-angle-left"></i>
@@ -525,6 +559,32 @@
                   </li>
               </ul>
             </li>
+
+            <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-rupee-sign"></i>
+              <p>
+                Expense Details
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+
+              <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="{% url 'expense_detail-new' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Entry</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'expense_detail-view' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>View</p>
+                    </a>
+                  </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
                 <a href="{% url 'logout' %}" class="nav-link">
               <i class="nav-icon fas fa-power-off"></i>
