--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
@@ -519,26 +519,51 @@ $(function () {
           })
     </script>
 
+        <script>
+
+        document.addEventListener('DOMContentLoaded',function (){
+            document.querySelector('#id_loss_price_petrol').onfocusin=function (){
+
+                let cash=parseInt(document.querySelector('#id_cash').value);
+                let phonePay=parseInt(document.querySelector('#id_phonePay').value);
+                let googlePay=parseInt(document.querySelector('#id_googlePay').value);
+                let paytm=parseInt(document.querySelector('#id_paytm').value);
+                let upi=parseInt(document.querySelector('#id_upi').value);
+                let credit_debit_card=parseInt(document.querySelector('#id_credit_debit_card').value);
+                let creditor_amount=parseInt(document.querySelector('#id_creditor_amount').value);
+
+                let total_price_petrol=document.querySelector('#id_total_price_petrol').value;
+
+                let tamount=(cash+phonePay+googlePay+paytm+upi+credit_debit_card+creditor_amount);
+
+                console.log(tamount)
+                document.querySelector('#id_loss_price_petrol').value=total_price_petrol-tamount;
+            }
+        })
+    </script>
+
+
     <script>
 
         document.addEventListener('DOMContentLoaded',function (){
+            document.querySelector('#id_loss_price_diesel').onfocusin=function (){
 
-            document.querySelector('#id_loss_price_petrol').onfocusout=function (){
+                let cash=parseInt(document.querySelector('#id_cash').value);
+                let phonePay=parseInt(document.querySelector('#id_phonePay').value);
+                let googlePay=parseInt(document.querySelector('#id_googlePay').value);
+                let paytm=parseInt(document.querySelector('#id_paytm').value);
+                let upi=parseInt(document.querySelector('#id_upi').value);
+                let credit_debit_card=parseInt(document.querySelector('#id_credit_debit_card').value);
+                let creditor_amount=parseInt(document.querySelector('#id_creditor_amount').value);
 
-                let cash=document.querySelector('#id_cash').value;
-                let paytm=document.querySelector('#id_paytm').value;
-                let phonepay=document.querySelector('#id_phonepay').value;
-                let card_debit_card=document.querySelector('#id_card').value;
-                let googlepay=document.querySelector('#id_googlepay').value;
-                let camount=document.querySelector('#id_creditoramount').value;
-                let tp=document.querySelector('#id_totaldprice').value;
+                let total_price_diesel=document.querySelector('#id_total_price_diesel').value;
 
-                let a=cash+paytm+phonepay+card+googlepay+camount
+                let tamount=(cash+phonePay+googlePay+paytm+upi+credit_debit_card+creditor_amount);
 
-                document.querySelector('#id_loss_price_petrol').value=a-tp;
+                console.log(tamount)
+                document.querySelector('#id_loss_price_diesel').value=total_price_diesel-tamount;
             }
         })
-
     </script>
 
 {% endblock %}
