--- a/tank_master/templates/tank_master/tank_form.html
+++ b/tank_master/templates/tank_master/tank_form.html
@@ -152,7 +152,35 @@
                       </div>
 
                   </div>
+                  <div class="row">
 
+                      <div class="form-group form-group col-lg-6 col-lg-6">
+                        <label for="exampleInputPetrolrate">Oil Opening in Ltr </label>
+                          {% crispy_field form.oil_lit_opening %}
+                          {% if  form.oil_lit_opening.errors %}
+                              {% for error in form.oil_lit_opening.errors %}
+                                  <div class="invalid-feedback">
+                                      {{ error }}
+                                  </div>
+                              {% endfor %}
+                          {% endif %}
+                      </div>
+
+                      <div class="form-group form-group col-lg-6 col-lg-6">
+                        <label for="exampleInputPetrolrate">
+                            Oil Closing (LTR)
+                        </label>
+                          {% crispy_field form.oil_lit_closing %}
+                          {% if  form.oil_lit_closing.errors %}
+                              {% for error in form.oil_lit_closing.errors %}
+                                  <div class="invalid-feedback">
+                                      {{ error }}
+                                  </div>
+                              {% endfor %}
+                          {% endif %}
+                      </div>
+
+                  </div>
                   <!-- /.card-body -->
 
                 <div class="card-footer" align="center">
